<resources>
    <string name="app_name">shopping</string>
    <string name="shop_home">首页</string>
    <string name="shop_topic">专题</string>
    <string name="shop_sort">分类</string>
    <string name="shop_cart">购物车</string>
    <string name="shop_me">我的</string>

    <string name="price_news_model">￥$</string>
    <string name="css_goods">
         html,body,p{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
</resources>
