<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/select_home"
    android:title="@string/shop_home"/>
    <item
        android:id="@+id/navigation_topic"
        android:icon="@drawable/select_topic"
        android:title="@string/shop_topic"/>
    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/select_sort"
        android:title="@string/shop_sort"/>
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/select_cart"
        android:title="@string/shop_cart"/>
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/select_me"
        android:title="@string/shop_me"/>
</menu>